<resources>
    <string name="app_name">CustomerApp</string>
    <string name="app_logo">App Logo</string>

    <!-- LOGIN LAYOUT -->

    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="not_registered">No account yet? <b>Create one</b></string>

    <!-- REGISTER LAYOUT -->

    <string name="name">Name</string>
    <string name="nif">NIF</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="credit_card">Credit Card</string>
    <string name="register">Register</string>

    <!-- CREDIT CARD LAYOUT -->
    <string name="type">Card Type</string>
    <string name="number">Card Number</string>
    <string name="validity_date">Expiration Date</string>
    <string name="save">Done</string>
    <string name="close">Close</string>

    <!-- USER OPTIONS LAYOUT -->
    <string name="shows_icon">&#xf073;</string>
    <string name="shows">Shows</string>

    <string name="cafeteria_icon">&#xf0f4;</string>
    <string name="cafeteria">Cafeteria</string>

    <string name="vouchers_icon">&#xf02c;</string>
    <string name="vouchers">Vouchers</string>

    <string name="history_icon">&#xf1da;</string>
    <string name="history">Transactions</string>

    <string name="settings_icon">&#xf085;</string>
    <string name="settings">Settings</string>

    <string name="logout_icon">&#xf011;</string>
    <string name="logout">Logout</string>

    <!-- SHOWS LAYOUT -->
    <string name="empty">No bought tickets yet.</string>
    <string name="buy_btn">Buy</string>
    <string name="validate_btn">Validate</string>

    <!-- SHOW LAYOUT -->
    <string name="description">Description: </string>
    <string name="date">Date: </string>
    <string name="price">Price: </string>
    <string name="tickets">Tickets: </string>
    <string name="increase">+</string>
    <string name="decrease">-</string>
    <string name="default_tickets">0</string>
    <string name="confirm_purchase">Confirm Purchase</string>
    <string name="confirm_validation">Validate Tickets</string>
    <string name="show_title_desc">Show Title: </string>
    <string name="total_price">Total price: </string>
    <string name="qr_code">Show your QR Code at the entrance!</string>

    <!-- VOUCHERS LAYOUT -->
    <string name="empty_vouchers">No vouchers yet.</string>

    <!-- PRODUCTS LAYOUT -->
    <string name="shopping_cart">Shopping Cart</string>
    <string name="empty_SC">Empty shopping cart</string>
    <string name="empty_cafeteria">No products yet.</string>
    <string name="select_vouchers">Select Vouchers</string>
    <string name="default_vouchers">0 vouchers selected</string>
    <string name="product_quantity">Quantity: </string>
    <string name="qr_code_cafeteria">Show your QR Code at the cafeteria!</string>

    <!-- TRANSACTIONS LAYOUT -->
    <string name="empty_orders">No orders yet.</string>
    <string name="default_used_vouchers">0 vouchers used</string>

</resources>
