<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_margin="10dp">

    <TextView
        android:id="@+id/show_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp"
        android:textAllCaps="true"
        android:textColor="@color/primary_dark"
        style="@style/TitleStyle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/description"/>
        <TextView
            android:id="@+id/show_description"
            android:layout_marginStart="2dp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="7dp"
        android:layout_marginBottom="7dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/date"/>
        <TextView
            android:id="@+id/show_date"
            android:layout_marginStart="2dp"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="7dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/price"/>
        <TextView
            android:id="@+id/show_price"
            android:layout_marginStart="2dp"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:text="@string/tickets"/>

        <LinearLayout
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/decrease"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:layout_marginStart="0dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:paddingTop="0dp"
                    android:layout_gravity="center"

                    android:text="@string/decrease"
                    android:textStyle="bold"

                    style="@android:style/Widget.Button"
                    android:backgroundTint="@color/monsoon"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/number_tickets"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/default_tickets"/>

                <TextView
                    android:id="@+id/increase"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"

                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="8dp"
                    android:paddingTop="0dp"
                    android:layout_gravity="center"

                    android:text="@string/increase"
                    android:textStyle="bold"

                    style="@android:style/Widget.Button"
                    android:backgroundTint="@color/monsoon"
                    android:textColor="@color/white"/>
            </LinearLayout>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:inputType="numberSigned"
                android:visibility="invisible"
                />
        </LinearLayout>


    </TableRow>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_buy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/buy_btn"
            android:textColor="@color/white"/>

    </LinearLayout>
</LinearLayout>